--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.tutorial">
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -8,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tutorial">
+        <activity android:name=".DisplayMessageActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
@@ -18,4 +20,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
